add parceiros section with layout and styling enhancements

--- a/src/output.css
+++ b/src/output.css
@@ -626,6 +626,10 @@ video {
   margin: 0.5rem;
 }
 
+.m-12 {
+  margin: 3rem;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -817,9 +821,20 @@ video {
   border-left-width: calc(2px * calc(1 - var(--tw-divide-x-reverse)));
 }
 
+.divide-y-4 > :not([hidden]) ~ :not([hidden]) {
+  --tw-divide-y-reverse: 0;
+  border-top-width: calc(4px * calc(1 - var(--tw-divide-y-reverse)));
+  border-bottom-width: calc(4px * var(--tw-divide-y-reverse));
+}
+
 .divide-verde-800 > :not([hidden]) ~ :not([hidden]) {
   --tw-divide-opacity: 1;
   border-color: rgb(22 40 31 / var(--tw-divide-opacity, 1));
+}
+
+.divide-verde-900 > :not([hidden]) ~ :not([hidden]) {
+  --tw-divide-opacity: 1;
+  border-color: rgb(15 28 21 / var(--tw-divide-opacity, 1));
 }
 
 .place-self-start {
@@ -876,6 +891,10 @@ video {
 
 .border-2 {
   border-width: 2px;
+}
+
+.border-b-2 {
+  border-bottom-width: 2px;
 }
 
 .border-verde-800 {
@@ -987,6 +1006,11 @@ video {
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .pb-4 {
@@ -1154,12 +1178,20 @@ video {
   display: flex;
 }
 
+.\*\:\*\:max-h-8 > * > * {
+  max-height: 2rem;
+}
+
 .\*\:items-center > * {
   align-items: center;
 }
 
 .\*\:gap-4 > * {
   gap: 1rem;
+}
+
+.\*\:p-4 > * {
+  padding: 1rem;
 }
 
 .placeholder\:text-verde-700::-moz-placeholder {
@@ -1248,6 +1280,12 @@ video {
     margin-bottom: 1rem;
   }
 
+  .max-sm\:divide-y-4 > :not([hidden]) ~ :not([hidden]) {
+    --tw-divide-y-reverse: 0;
+    border-top-width: calc(4px * calc(1 - var(--tw-divide-y-reverse)));
+    border-bottom-width: calc(4px * var(--tw-divide-y-reverse));
+  }
+
   .max-sm\:px-4 {
     padding-left: 1rem;
     padding-right: 1rem;
@@ -1309,6 +1347,15 @@ video {
     border-radius: 9999px;
   }
 
+  .sm\:border-t-2 {
+    border-top-width: 2px;
+  }
+
+  .sm\:border-verde-900 {
+    --tw-border-opacity: 1;
+    border-color: rgb(15 28 21 / var(--tw-border-opacity, 1));
+  }
+
   .sm\:bg-verde-950 {
     --tw-bg-opacity: 1;
     background-color: rgb(3 5 4 / var(--tw-bg-opacity, 1));
@@ -1326,6 +1373,11 @@ video {
   .sm\:py-16 {
     padding-top: 4rem;
     padding-bottom: 4rem;
+  }
+
+  .sm\:py-8 {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
   }
 
   .sm\:pl-4 {
